Changed root user to nobody in task5 Fixed ports for tests in task5 Deleted trash from code Deleted extra files

--- a/CyberCrew/task5/src/docker-compose.yml
+++ b/CyberCrew/task5/src/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2.4"
 services:
   task5:
     container_name: task5
+    user: nobody
     build:
       context: .
       dockerfile: Dockerfile
